# rust_grpc

./: Cargo.toml  README.md  build.rs
proto/: calculator.proto
src/: client.rs  main.rs  server.rs
