[package]
name = "rust_grpc"
version = "0.1.0"
authors = ["disco07"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.2"
prost = "0.11.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.2"

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"